// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test transformToMjml when mode is "production" should render as expected 1`] = `
"
        <mjml>
          <mj-head>
              
              <mj-style>
                
              </mj-style>
              <mj-breakpoint width=\\"480px\\" />
            <mj-attributes>
              
              <mj-all font-family=\\"lucida Grande,Verdana,Microsoft YaHei\\" />
              <mj-text color=\\"#000000\\" />
              
            </mj-attributes>
          </mj-head>
          <mj-body background-color=\\"#efeeea\\" width=\\"600px\\" css-class=\\"mjml-body\\">
            
              <mj-section padding=\\"20px 0px 20px 0px\\" border=\\"none\\" direction=\\"ltr\\" text-align=\\"center\\" background-color=\\"#ffffff\\" background-repeat=\\"repeat\\" background-size=\\"auto\\" background-position=\\"top center\\">
               
              <mj-column padding=\\"0px 0px 0px 0px\\" border=\\"none\\" vertical-align=\\"top\\">
               
          <mj-text font-size=\\"13px\\" padding=\\"10px 25px 10px 25px\\" line-height=\\"1\\" align=\\"left\\">
           Make it easy for everyone to compose emails!
          </mj-text>
        
              </mj-column>
            
              </mj-section>
            
          </mj-body>
        </mjml>
        "
`;

exports[`Test transformToMjml when mode is "testing" should render as expected 1`] = `
"
        <mjml>
          <mj-head>
              
              <mj-style>
                
              </mj-style>
              <mj-breakpoint width=\\"480px\\" />
            <mj-attributes>
              
              <mj-all font-family=\\"lucida Grande,Verdana,Microsoft YaHei\\" />
              <mj-text color=\\"#000000\\" />
              
            </mj-attributes>
          </mj-head>
          <mj-body background-color=\\"#efeeea\\" width=\\"600px\\" css-class=\\"email-block node-idx-content node-type-page mjml-body\\">
            
              <mj-section padding=\\"20px 0px 20px 0px\\" border=\\"none\\" direction=\\"ltr\\" text-align=\\"center\\" background-color=\\"#ffffff\\" background-repeat=\\"repeat\\" background-size=\\"auto\\" background-position=\\"top center\\" css-class=\\"email-block node-idx-content.children.[0] node-type-section\\">
               
              <mj-column padding=\\"0px 0px 0px 0px\\" border=\\"none\\" vertical-align=\\"top\\" css-class=\\"email-block node-idx-content.children.[0].children.[0] node-type-column\\">
               
          <mj-text font-size=\\"13px\\" padding=\\"10px 25px 10px 25px\\" line-height=\\"1\\" align=\\"left\\" css-class=\\"email-block node-idx-content.children.[0].children.[0].children.[0] node-type-text\\">
           Make it easy for everyone to compose emails!
          </mj-text>
        
              </mj-column>
            
              </mj-section>
            
          </mj-body>
        </mjml>
        "
`;
